--- a/index.html
+++ b/index.html
@@ -7,6 +7,36 @@
     <title>Yard Development</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="wrapper">
+            <div class="header__items">
+                <div class="header__item">
+                    <img src="assets/images/main-logo-white.png" alt="main-logo" class="header__item-logo">
+                    <ul class="header__item-nav">
+                        <li><a href="#" class="header__item-action">West town</a></li>
+                        <li><a href="#" class="header__item-action">Beskid home resorte</a></li>
+                    </ul>
+                </div>
+
+                <div class="header__item">
+                    <p class="header__item-number">+380 (98) 22 55 800</p>
+                    <button class="header__item-button main-button">Замовити дзвінок</button>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <section class="about">
+        <div class="about__content">
+            <h1 class="about__content-title">YARD DEVELOPMENT</h1>
+            <p class="about__content-text">
+                Будівельна компанія, що займається будівництвом з
+                2018 року і за цей період вже ввела в експлуатацію понад 89 будинків.
+                Зараз ми займаємось реалізацією проекту найбільшого містечка
+                таунхаусів у західному регіоні, яке має назву WEST TOWN, а також
+                котеджів зі спа-зоною у гірськолижному курорті Буковель.
+            </p>
+        </div>
+    </section>
 </body>
 </html>
