--- a/index.html
+++ b/index.html
@@ -38,5 +38,83 @@
             </p>
         </div>
     </section>
+
+    <section class="complexes">
+        <div class="wrapper">
+            <h2 class="complexes__title">Наші комплекси</h2>
+
+            <div class="complexes__items">
+                <div class="complex">
+                    <div class="complex__info">
+                        <img src="assets/images/beskid-home.png" alt="beskid-home" class="complex__info-slider">
+                        <div class="complex__info-text">
+                            <h3 class="info__title">Beskid home resorte</h3>
+                            <p class="info__text">
+                                Даний комплекс позиціонуємо як відпочинковий з власною СПА-зоною для людей,
+                                які бажають інвестувати кошти у нерухомість та здавати їх в оренду.
+                            </p>
+
+                            <p class="info__text">
+                                Даний комплекс позиціонуємо як відпочинковий з власною СПА-зоною для людей,
+                                які бажають інвестувати кошти у нерухомість та здавати їх в оренду.
+
+                                Він складається із 8-ми котеджів та СПА-зони.
+                                Є два типи котеджів, які відрізняється тільки за площею терас:
+                                Тип 1 - площа 117,94 м2 - тераса 16,80 м2
+                                Тип 2 - площа 121,27 м2 - тераса 27,90 м2
+                                У вартість до кожного котеджу входить ділянка площею 1,5 сотки.
+                                Комплекс передбачає наявність власної СПА-зони, яка включатиме
+                                - сезонний басейн під відкритим небом
+                                -джакузі/басейн із зоною гідромасажу
+                                -фінська сауна, хамам
+                                -тропічний душ
+                                -послуги масажу
+                                Будинки продаються під ключ, з ремонтом, меблями та технікою.
+                                Власна управлінська компанія яка бере на себе всі клопоти.
+                                Можливе розтермінування до кінця будівництва.
+                            </p>
+
+                            <p class="info__price">Ціна: <span>250 000$</span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="footer__content">
+                <div class="footer__content-items">
+                    <div class="content__item">
+                        <img src="assets/images/footer-logo.png" alt="main-logo" class="content__item-logo">
+                    </div>
+                    <div class="content__item">
+                        <h4 class="content__item-title">Наші комплекси</h4>
+                        <a href="#" class="content__item-text">West town</a>
+                        <a href="#" class="content__item-text">Beskid home resorte</a>
+                    </div>
+                    <div class="content__item">
+                        <h4 class="content__item-title">Контактна інформація</h4>
+                        <a href="#" class="content__item-text">+380 (98) 22 55 800 (Viber, Telegram)</a>
+                        <a href="#" class="content__item-text">yarddevelopment34@gmail.com</a>
+                    </div>
+                </div>
+
+                <div class="footer__actions">
+                    <p class="footer__actions-item">© 2023 | Всі права захищено</p>
+                    <div class="footer__actions-socials">
+                        <svg class="social-icon">
+                            <use xlink:href="assets/icons/sprite.svg#instagram"></use>
+                        </svg>
+
+                        <svg class="social-icon">
+                            <use xlink:href="assets/icons/sprite.svg#facebook"></use>
+                        </svg>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
