--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="complexes__items">
                 <div class="complex">
                     <div class="complex__info">
-                        <img src="assets/images/beskid-home.png" alt="beskid-home" class="complex__info-slider">
+                        <div class="complex__info-slider"></div>
                         <div class="complex__info-text">
                             <h3 class="info__title">Beskid home resorte</h3>
                             <p class="info__text">
@@ -55,9 +55,6 @@
                             </p>
 
                             <p class="info__text">
-                                Даний комплекс позиціонуємо як відпочинковий з власною СПА-зоною для людей,
-                                які бажають інвестувати кошти у нерухомість та здавати їх в оренду.
-
                                 Він складається із 8-ми котеджів та СПА-зони.
                                 Є два типи котеджів, які відрізняється тільки за площею терас:
                                 Тип 1 - площа 117,94 м2 - тераса 16,80 м2
@@ -74,9 +71,67 @@
                                 Можливе розтермінування до кінця будівництва.
                             </p>
 
-                            <p class="info__price">Ціна: <span>250 000$</span></p>
+                            <p class="info__text">Ціна: <span>250 000$</span></p>
                         </div>
                     </div>
+
+                    <form action="#" class="form">
+                        <div class="form__container">
+                            <h4 class="form__container-title">Бажаєте придбати? Залиште заявку.</h4>
+
+                            <div class="form__container-actions">
+                                <input class="form-input" type="tel" name="phone" pattern="[+]{1}[0-9]{11,14}" maxlength="13" placeholder="+380(98)-99-99-999" required>
+                                <input class="form-input" type="email" name="mail" placeholder="Введіть пошту" required>
+                                <button class="form-button main-button">Відправити</button>
+                            </div>
+                        </div>
+                    </form>
+
+                </div>
+
+                <div class="complex">
+                    <div class="complex__info">
+                        <div class="complex__info-slider"></div>
+                        <div class="complex__info-text">
+                            <h3 class="info__title">West town</h3>
+                            <p class="info__text">
+                                Даний комплекс є одним з найбільших котеджних містечок в західному регіоні.
+                                Він неодмінно сподобається тим, хто прагне віднайти спокій, комфорт та затишок 
+                                серед великого міста.
+                            </p>
+
+                            <p class="info__text">
+                                КМ розташоване у Крихівцях посеред приватного сектору. В містечку передбачено відеоспостереження, 
+                                бруковане подвір'я. Дитячий садочок знаходиться в межах 500 м. Школа знаходиться в межах 700 м. 
+                                До міського озера на будь-якому транспорті ви зможете дістатись всього за 10 хвилин, а до центру 
+                                міста за 20 хвилин. Будинок продається у стані "сирця" і у вартість вже входить штукатурка стін 
+                                "під маяки", встановлення шестикамерних вікон з енергозберігаючим двокамерним склом (три скла), 
+                                встановлення вхідних броньованих дверей, бетонні сходи на другий поверх та встановлення всіх 
+                                лічильників обліку води, газу та електроенергії. Фасад будинку утеплюється 10 см шаром пінопласту. 
+                                У вартість до кожного таунхауса також включена земельна ділянка. Заднє подвір'я кожного таунхауса 
+                                відокремлене один від одного. <br> Ціна:
+                            </p>
+
+                            <div class="info__price">
+                                <p class="info__text">Внутрішні / 1,65 сотих - <span>55 000$</span></p>
+                                <p class="info__text">Крайні / 2 сотих - <span>62 000$</span></p>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <form action="#" class="form">
+                        <div class="form__container">
+                            <h4 class="form__container-title">Бажаєте придбати? Залиште заявку.</h4>
+
+                            <div class="form__container-actions">
+                                <input class="form-input" type="tel" name="phone" pattern="[+]{1}[0-9]{11,14}" maxlength="13" placeholder="+380(98)-99-99-999" required>
+                                <input class="form-input" type="email" name="mail" placeholder="Введіть пошту" required>
+                                <button class="form-button main-button">Відправити</button>
+                            </div>
+                        </div>
+                    </form>
+
                 </div>
             </div>
         </div>
