header animation script

--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
 <body>
     <header class="header">
         <div class="wrapper">
+            <div class="header__burger">
+                <span></span>
+            </div>
             <div class="header__items">
-                <div class="header__item">
-                    <img src="assets/images/main-logo-white.png" alt="main-logo" class="header__item-logo">
-                    <ul class="header__item-nav">
-                        <li><a href="#" class="header__item-action">West town</a></li>
-                        <li><a href="#" class="header__item-action">Beskid home resorte</a></li>
+                <div class="header__items-nav">
+
+                    <img src="assets/images/main-logo-white.png" alt="main-logo" class="header__items-logo">
+                    <ul class="navigations">
+                        <li><a href="#" class="navigations__action">West town</a></li>
+                        <li><a href="#" class="navigations__action">Beskid home resorte</a></li>
                     </ul>
                 </div>
 
-                <div class="header__item">
-                    <p class="header__item-number">+380 (98) 22 55 800</p>
-                    <button class="header__item-button main-button">Замовити дзвінок</button>
+                <div class="header__items-contacts">
+                    <p class="contacts__number">+380 (98) 22 55 800</p>
+                    <button class="contacts__button main-button">Замовити дзвінок</button>
                 </div>
             </div>
         </div>
@@ -192,6 +196,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script src="swiper.js"></script>
+    <script src="scripts/header.js"></script>
+    <script src="scripts/swiper.js"></script>
 </body>
 </html>
