--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                     <button class="contacts__button main-button">Замовити дзвінок</button>
                 </div>
             </div>
+
+            <div class="header__menu">
+                <div class="wrapper">
+                    <h2 class="menu__title"></h2>
+                </div>
+            </div>
         </div>
     </header>
 
