--- a/index.html
+++ b/index.html
@@ -101,23 +101,25 @@
                         <div class="complex__info-slider">
                             <div class="swiper mySwiper">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img class="slider-img" src="assets/images/beskid-home/beskid1.png" alt="beskid-home"></div>
-                                    <div class="swiper-slide"><img class="slider-img" src="assets/images/beskid-home/beskid2.png" alt="west-town"></div>
-                                    <div class="swiper-slide"><img class="slider-img" src="assets/images/beskid-home/beskid3.png" alt="west-town"></div>
-                                    <div class="swiper-slide"><img class="slider-img" src="assets/images/beskid-home/beskid4.png" alt="west-town"></div>
+                                    <div class="swiper-slide"><img class="slider-img" src="assets/images/beskid-home/beskid1.png" alt="beskid-home"><div class="shadow"></div></div>
+                                    <div class="swiper-slide"><img class="slider-img" src="assets/images/beskid-home/beskid2.png" alt="west-town"><div class="shadow"></div></div>
+                                    <div class="swiper-slide"><img class="slider-img" src="assets/images/beskid-home/beskid3.png" alt="west-town"><div class="shadow"></div></div>
+                                    <div class="swiper-slide"><img class="slider-img" src="assets/images/beskid-home/beskid4.png" alt="west-town"><div class="shadow"></div></div>
                                 </div>
                                 <div class="swiper-pagination"></div>
                                 </div>
                         </div>
                         <div class="complex__info-text">
                             <h3 class="info__title">Beskid home resorte</h3>
-                            <p class="info__text">
-                                Даний комплекс позиціонуємо як відпочинковий з власною СПА-зоною для людей,
-                                які бажають інвестувати кошти у нерухомість та здавати їх в оренду.
-                            </p>
+
+                            <div class="complex__info-types">
+                                <button class="main-button type__button type__button--active">Тип - 1</button>
+                                <button class="main-button type__button">Тип - 2</button>
+                            </div>
 
                             <p class="info__text">
-                                Він складається із 8-ми котеджів та СПА-зони.
+                                Даний комплекс позиціонуємо як відпочинковий з власною СПА-зоною для людей,
+                                які бажають інвестувати кошти у нерухомість та здавати їх в оренду. <br>
                                 Є два типи котеджів, які відрізняється тільки за площею терас: <br>
                                 Тип 1 - площа 117,94 м2 - тераса 16,80 м2 <br>
                                 Тип 2 - площа 121,27 м2 - тераса 27,90 м2 <br>
@@ -156,8 +158,8 @@
                         <div class="complex__info-slider">
                             <div class="swiper mySwiper">
                                 <div class="swiper-wrapper">
-                                  <div class="swiper-slide"><img src="assets/images/beskid-home.png" alt="beskid-home"></div>
-                                  <div class="swiper-slide"><img src="assets/images/west-town.png" alt="west-town"></div>
+                                    <div class="swiper-slide"><img class="slider-img" src="assets/images/beskid-home/beskid2.png" alt="west-town"><div class="shadow"></div></div>
+                                    <div class="swiper-slide"><img class="slider-img" src="assets/images/beskid-home/beskid4.png" alt="west-town"><div class="shadow"></div></div>
                                 </div>
                                 <div class="swiper-pagination"></div>
                               </div>
