--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <div class="contacts__container">
                             <h4 class="contacts__container-title">Наші комплекси</h4>
                             <a href="#" class="contacts__container-text">WEST TOWN</a>
-                            <a href="#" class="contacts__container-text">BESKID HOME RESORTE</a>
+                            <a href="#" class="contacts__container-text">BESKID HOME RESORT</a>
                         </div>
                         <div class="contacts__container">
                             <h4 class="contacts__container-title">Контактна інформація</h4>
@@ -56,14 +56,13 @@
         </div>
 
         <div class="wrapper">
-
             <div class="header__items">
                 <div class="header__items-nav">
 
                     <img src="assets/images/main-logo-white.png" alt="main-logo" class="header__items-logo">
                     <ul class="navigations">
                         <li><a href="#" class="navigations__action">West town</a></li>
-                        <li><a href="#" class="navigations__action">Beskid home resorte</a></li>
+                        <li><a href="#" class="navigations__action">Beskid home resort</a></li>
                     </ul>
                 </div>
 
@@ -85,7 +84,7 @@
         <div class="about__content">
             <h1 class="about__content-title">YARD DEVELOPMENT</h1>
             <p class="about__content-text">
-                Понад 89 будинків введено в експлуатацію. Дбаємо про ваш <br> комфорт та затишок!
+                Понад 89 будинків введено в експлуатацію. Дбаємо <br> про ваш комфорт та затишок!
             </p>
         </div>
     </section>
@@ -110,7 +109,7 @@
                                 </div>
                         </div>
                         <div class="complex__info-text">
-                            <h3 class="info__title">Beskid home resorte</h3>
+                            <h3 class="info__title">Beskid home resort</h3>
 
                             <div class="complex__info-types">
                                 <button class="main-button type__button type__button--active">Тип - 1</button>
@@ -144,7 +143,7 @@
                             <h4 class="form__container-title">Отримати повний огляд котеджу</h4>
 
                             <div class="form__container-actions">
-                                <input class="form-input item" type="tel" name="phone" pattern="[+]{1}[0-9]{11,14}" maxlength="13" placeholder="+380(98)-99-99-999" required>
+                                <input class="form-input item" type="tel" name="phone" maxlength="13" placeholder="Номер телефону" required>
                                 <input class="form-input item" type="email" name="mail" placeholder="Введіть пошту" required>
                                 <button class="form-button main-button item">Відправити</button>
                             </div>
@@ -158,46 +157,67 @@
                         <div class="complex__info-slider">
                             <div class="swiper mySwiper">
                                 <div class="swiper-wrapper">
-                                    <div class="swiper-slide"><img class="slider-img" src="assets/images/beskid-home/beskid2.png" alt="west-town"><div class="shadow"></div></div>
-                                    <div class="swiper-slide"><img class="slider-img" src="assets/images/beskid-home/beskid4.png" alt="west-town"><div class="shadow"></div></div>
+                                    <div class="swiper-slide"><img class="slider-img" src="assets/images/west-town/west-town-main.png" alt="west-town"><div class="shadow"></div></div>
+                                    <div class="swiper-slide"><img class="slider-img" src="assets/images/west-town/west-town.png" alt="west-town"><div class="shadow"></div></div>
                                 </div>
                                 <div class="swiper-pagination"></div>
                               </div>
                         </div>
-                        <div class="complex__info-text">
+                        <div class="complex__info-text complex__west-town">
                             <h3 class="info__title">West town</h3>
-                            <p class="info__text">
-                                Даний комплекс є одним з найбільших котеджних містечок в західному регіоні.
-                                Він неодмінно сподобається тим, хто прагне віднайти спокій, комфорт та затишок 
-                                серед великого міста.
-                            </p>
+                            
+                            <div class="text-container">
+                                <p class="info__text">89 будинків введено в експлуатацію.</p>
+                                <div class="sizes-container">
+                                    <p class="info__text"> - Площа 120 м2;</p>
+                                    <p class="info__text"> - Ділянка - від 1,65 сотих;</p>
+                                </div>
 
-                            <p class="info__text">
-                                КМ розташоване у Крихівцях посеред приватного сектору. В містечку передбачено відеоспостереження, 
-                                бруковане подвір'я. Дитячий садочок знаходиться в межах 500 м. Школа знаходиться в межах 700 м. 
-                                До міського озера на будь-якому транспорті ви зможете дістатись всього за 10 хвилин, а до центру 
-                                міста за 20 хвилин. Будинок продається у стані "сирця" і у вартість вже входить штукатурка стін 
-                                "під маяки", встановлення шестикамерних вікон з енергозберігаючим двокамерним склом (три скла), 
-                                встановлення вхідних броньованих дверей, бетонні сходи на другий поверх та встановлення всіх 
-                                лічильників обліку води, газу та електроенергії. Фасад будинку утеплюється 10 см шаром пінопласту. 
-                                У вартість до кожного таунхауса також включена земельна ділянка. Заднє подвір'я кожного таунхауса 
-                                відокремлене один від одного. <br> Ціна:
-                            </p>
+                                <div class="info__container">
+                                    <svg class="text-icon">
+                                        <use xlink:href="assets/icons/text-icons.svg#school"></use>
+                                    </svg>
+                                    <p class="info-text">Школа знаходиться в межах 700 м.</p>
+                                </div>
 
-                            <div class="info__price">
-                                <p class="info__text">Внутрішні / 1,65 сотих - <span>55 000$</span></p>
-                                <p class="info__text">Крайні / 2 сотих - <span>62 000$</span></p>
+                                <div class="info__container">
+                                    <svg class="text-icon">
+                                        <use xlink:href="assets/icons/text-icons.svg#kindergarten"></use>
+                                    </svg>
+                                    <p class="info-text">Дитячий садочок знаходиться в межах 500 м.</p>
+                                </div>
 
+
+                                <div class="info__container">
+                                    <svg class="text-icon">
+                                        <use xlink:href="assets/icons/text-icons.svg#lake"></use>
+                                    </svg>
+                                    <p class="info-text">До міського озера на будь-якому транспорті ви зможете дістатись всього за 10 хвилин.</p>
+                                </div>
+
+
+                                <div class="info__container">
+                                    <svg class="text-icon">
+                                        <use xlink:href="assets/icons/text-icons.svg#building"></use>
+                                    </svg>
+                                    <p class="info-text">До центру міста за 20 хвилин.</p>
+                                </div>
+
+
+
+                                <div class="info__text-container">
+                                    <p class="info-text">Розтермінування до 24-х місяців.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <form action="#" class="form">
                         <div class="form__container">
-                            <h4 class="form__container-title">Отримати повний огляд котеджу</h4>
+                            <h4 class="form__container-title">Отримати розрахунок розтермінування</h4>
 
                             <div class="form__container-actions">
-                                <input class="form-input item" type="tel" name="phone" pattern="[+]{1}[0-9]{11,14}" maxlength="13" placeholder="+380(98)-99-99-999" required>
+                                <input class="form-input item" type="tel" name="phone" maxlength="13" placeholder="Номер телефону" required>
                                 <input class="form-input item" type="email" name="mail" placeholder="Введіть пошту" required>
                                 <button class="form-button main-button item">Відправити</button>
                             </div>
@@ -219,7 +239,7 @@
                     <div class="content__item">
                         <h4 class="content__item-title">Наші комплекси</h4>
                         <a href="#" class="content__item-text">WEST TOWN</a>
-                        <a href="#" class="content__item-text">BESKID HOME RESORTE</a>
+                        <a href="#" class="content__item-text">BESKID HOME RESORT</a>
                     </div>
                     <div class="content__item">
                         <h4 class="content__item-title">Контактна інформація</h4>
