burger-menu overflow fix and add pop-up on header button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <header class="header">
+        
+        <div class="modal"></div>
 
         <div class="burger">
             <div class="burger__items">
@@ -79,6 +81,8 @@
             </div>
         </div>
     </header>
+
+
 
     <section class="about">
         <div class="about__content">
